--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ twitter_username: andysaktia
 github_username:  andysaktia
 
 # Build settings
-theme: jekyll-theme-minimal
+theme: minima
 plugins:
   - jekyll-feed
 
